--- a/3_task_matstat.ipynb
+++ b/3_task_matstat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "        77, 100,  70,  92, 117,  95,  97,  85,  81])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
     "a = 0.05\n",
     "f1 = np.max(X)/(1+(1 - a/2)**(1/N))\n",
     "s1 = np.max(X)/(1+(a/2)**(1/N))\n",
-    "print('Точный интервал: [',f , ', ',s, ']')"
+    "print('Точный интервал: [',f1 , ', ',s1, ']')"
    ]
   },
   {
@@ -103,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Интервал по ОММ: [ 59.5075320478351 ,  60.59731720618941 ]\n"
+      "Интервал по ОММ: [ 59.27977341682335 ,  63.293559916509984 ]\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
     "score = 2/3*np.mean(X)\n",
     "f2 = score - q*2/3*np.sqrt(moment(X, 2) - np.mean(X))/10\n",
     "s2 = score - (-q)*2/3*np.sqrt(moment(X, 2) - np.mean(X))/10\n",
-    "print('Интервал по ОММ: [',f , ', ',s, ']')"
+    "print('Интервал по ОММ: [',f2 , ', ',s2, ']')"
    ]
   },
   {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Бутстраповский интервал: [ 59.6 ,  63.66 ]\n"
+      "Бутстраповский интервал: [ 59.666666666666664 ,  63.63333333333333 ]\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
      "text": [
       "точный:  1.0897851583543101\n",
       "асимптотический:  4.013786499686631\n",
-      "бутстраповский:  4.059999999999995\n"
+      "бутстраповский:  3.9666666666666686\n"
      ]
     }
    ],
@@ -195,7 +195,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
